--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "vercel-start": "node server.js",
+    "vercel-build": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
